# 1.00.06 (45782) Nov 5, 2010
Changed maximum mass from 30 to 50 in interactive symbol for game modes to support P, S, Cl, Ar
Added more vertical space between periodic table and neutral atom/ion radio buttons in game modes
Fixed capitalization for text "Is It:"
# 1.00.05 (45778) Nov 5, 2010
11/5/10 Deploying to dev for use in upcoming interviews
# 1.00.04 (45774) Nov 5, 2010
11/5/10 Deploying for upcoming interviews.
Made the "Check" button be grayed out until the user enters an initial guess.
Capitalized Orbits and Clouds labels
Reversed order of the charge pair indicator so that it matches legend
Changed the nucleus configuration algorithm so that protons are easier to count (works better in game).
Made the Neutral Atom / Ion selector in the game only appear after the user had selected something in the periodic table.
Added label "Is it:" to the Neutral Atom / Ion selector in the game.
Various internal refactorings.
# 1.00.03 (45709) Nov 3, 2010
11/3/10 Publishing version to dev for internal review
Fixed: Neutral Atom / Ion on the "Element" view was not being correctly updated on "Show Answer".
Limited problems on level 1 of the game to "To Element" types, and to "To Symbol" or "From Symbol" types on the other two levels.
Fixed: Bug where atoms with too many particles in the schematic view did not reconfigure correctly on "Display Answer"
Added new possible atoms values for the game so that more schematic problems would be shown.
Internationalized game
Added a "neutral atom" / "ion" radio button selection for Guess the Element type problems
Fixed: Bug that prevented SchematicToElementProblem from appearing
Added a developer dialog that allows the specification of the allowed problem types for the game.
Added the ability to display the element name to the symbol display nodes.
Made symbol larger on the interactive symbol node.
# 1.00.02 (45521) Oct 27, 2010
Fixed: only allow schematic mode when Lithium or smaller in the game mode