@@ -1,3 +1,4 @@
+Internal fix: improved interface for PeriodicTableNode for usage in game mode
 # 1.00.06 (45782) Nov 5, 2010
 Changed maximum mass from 30 to 50 in interactive symbol for game modes to support P, S, Cl, Ar
 Added more vertical space between periodic table and neutral atom/ion radio buttons in game modes
